[package]
name = "chbs"
version = "0.1.0"
authors = ["Brant Watson <oldspiceap@gmail.com>"]
description = "Password Strength Checker"
edition = "2018"

[lib]
name = "chbslib"
path = "src/lib.rs"

[[bin]]
name = "chbs"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.7.1"
clap = "2.33.3"
